add endpoint for upd actor info, swagger docs
